--- a/libs/modules/blog.less
+++ b/libs/modules/blog.less
@@ -3,8 +3,9 @@
  */
 
 // Global elements
-.blog-sidebar {
-	order: 0 !important;
+.main-content .blog-sidebar {
+	order: 0;
+	border-width: 0px;
 }
 
 .small {
