--- a/libs/jade/dev/blog/blog-team-profile.jade
+++ b/libs/jade/dev/blog/blog-team-profile.jade
@@ -2,10 +2,10 @@ block settings
 	- var title = "That Person"
 	- var sidebar = true
 	- var toolbars = false
-	- var blog = true
-	- var dir = "../../"
+	//- var cookiemonster = true
+	- var mockup = false
 
-extends /template/template.jade
+extends ../template/template-blog.jade
 
 //block breadcrumbs
 	+breadcrumbs([
@@ -13,20 +13,11 @@ extends /template/template.jade
 		{title: "That person"}])
 
 block sidebar
-	include /template/sidebar-blog.jade
-
-block script
-	script.
-		$(document).ready(function() {
-			$( "#toggle" ).on( "click", function() {
-				console.log('lol');
-				$( this ).next().slideToggle();
-			});
-		});
+	include ../template/sidebar-blog.jade
 
 block content
 	.articleContent
-		img.avatar-left(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
+		img.avatar-left(src="images/sample-blog/avatar.png" alt="That Person")
 
 		h2 Digital Mechanic
 
