dev:fix: Got blog back to normal

--- a/libs/jade/dev/blog/blog-home-1.jade
+++ b/libs/jade/dev/blog/blog-home-1.jade
@@ -5,7 +5,7 @@ block settings
 	//- var cookiemonster = true
 	- var mockup = true
 
-extends ../template/nav-v1.jade
+extends /template/nav-v1.jade
 
 //block breadcrumbs
 	+breadcrumbs([
@@ -14,14 +14,14 @@ extends ../template/nav-v1.jade
 		.span12
 			.blog-panel-intro
 				h1 Our users, this means all of you
-				p.small #[a(href="#") Cat Togher] on February 5, 2016 in #[a(href="#") Casebook], #[a(href="#") Design] 
+				p.small #[a(href="#") Cat Togher] on February 5, 2016 in #[a(href="#") Casebook], #[a(href="#") Design]
 				p No 2 local Citizens Advice are the same. They don’t represent the same people, they have different funding and they are different sizes. That’s why we’ve been working really hard to get the whole network signed up and involved in the digital project.
 
 				a(href="#" style="border-bottom:none;")
 					button.btn.btn-secondary.right-button-icon(type="button") Read full article
 
 block sidebar
-	include ../template/sidebar-blog-v1.jade
+	include /template/sidebar-blog-v1.jade
 
 block content
 	.articleContent
@@ -32,7 +32,7 @@ block content
 				.blog-tag
 					| Content
 				h2 #[a(href="#") Making things simpler: Personal Independence Payment (PIP)]
-				p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design] 
+				p.small #[a(href="#") Stephen Rehill] on January 18, 2016 in #[a(href="#") Content], #[a(href="#") Design]
 				img(src="images/sample-blog/pip-feature-images-2.jpg" alt="PIP feature image" style="width:100%;")
 				p Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re #[a(href="#") terminally ill] your claim will be processed more quickly).
 				a(href="#" style="border-bottom:none;")
@@ -43,8 +43,8 @@ block content
 					| Design
 				.blog-tag
 					| Research
-				h2 #[a(href="#") Introducing… immigration advice]				
-				p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration] 
+				h2 #[a(href="#") Introducing… immigration advice]
+				p.small #[a(href="#") Emily Brunwin] on January 1, 2016 in #[a(href="#") Content], #[a(href="#") Immigration]
 				img(src="images/sample-blog/For-blog-post-featured-images.png" alt="Imigration feature image" style="width:100%;")
 				p We’ve pushed the button on some brand new content – immigration advice for the public and advisers. It’s new territory – so why did we take the leap?
 				a(href="#" style="border-bottom:none;")
