--- a/libs/jade/dev/blog/blog-home-grid.jade
+++ b/libs/jade/dev/blog/blog-home-grid.jade
@@ -4,8 +4,10 @@ block settings
 	- var toolbars = false
 	//- var cookiemonster = true
 	- var mockup = false
+	- var dir = "../../"
+	- var blog = true
 
-extends ../template/template-blog.jade
+extends /template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
