--- a/libs/jade/dev/blog/blog-get-involved.jade
+++ b/libs/jade/dev/blog/blog-get-involved.jade
@@ -4,8 +4,10 @@ block settings
 	- var toolbars = false
 	//- var cookiemonster = true
 	- var mockup = false
+	- var dir = "../../"
+	- var blog = true
 
-extends ../template/template-blog.jade
+extends /template/template.jade
 
 //block breadcrumbs
 	+breadcrumbs([
@@ -13,7 +15,7 @@ extends ../template/template-blog.jade
 		{title: "Get involved"}])
 
 block sidebar
-	include ../template/sidebar-blog.jade
+	include /template/sidebar-blog.jade
 
 block content
 	.articleContent
