--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -401,6 +401,13 @@ html.no-js
 			$(document).ready(function() {
 				$('.section-nav a[href*="' + filename + '"]').addClass('active');
 			});
+		if blog
+			script.
+				$(document).ready(function() {
+					$( "#toggle" ).on( "click", function() {
+						$( this ).next().slideToggle();
+					});
+				});
 
 		block script
 
