--- a/libs/modules/blog.less
+++ b/libs/modules/blog.less
@@ -105,6 +105,9 @@
 		padding: @box-spacing-vertical*2 0;
 		h3 {
 			margin-top: 0;
+			.small {
+				margin-left: 1em;
+			}
 		}
 		& >:last-child {
 			margin-bottom: 0;
