dev:fix: Fixed broken images

--- a/libs/jade/dev/blog/blog-team-profile.jade
+++ b/libs/jade/dev/blog/blog-team-profile.jade
@@ -19,7 +19,7 @@ block sidebar
 
 block content
 	.articleContent
-		img.avatar-left(src="images/sample-blog/avatar.png" alt="That Person")
+		img.avatar-left(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 
 		h2 Digital Mechanic
 
