--- a/libs/jade/dev/blog/blog-team.jade
+++ b/libs/jade/dev/blog/blog-team.jade
@@ -26,7 +26,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Manager
@@ -34,7 +34,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Manager
@@ -42,7 +42,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Manager
@@ -50,7 +50,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Manager
@@ -60,7 +60,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Content Designer
@@ -68,7 +68,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Content Designer
@@ -76,7 +76,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Content Designer
@@ -84,7 +84,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Content Designer
@@ -92,7 +92,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Content Designer
@@ -100,7 +100,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Content Designer
@@ -108,7 +108,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Content Designer
@@ -116,7 +116,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Content Designer
@@ -124,7 +124,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Content Designer
@@ -132,7 +132,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Content Designer
@@ -140,7 +140,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Content Designer
@@ -150,7 +150,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Designer
@@ -158,7 +158,7 @@ block content
 					.team
 						a(href="blog-team-profile.html")
 							.avatar-full
-								img(src="images/sample-blog/avatar.png" alt="That Person")
+								img(src="#{dir}images/sample-blog/avatar.png" alt="That Person")
 							.avatar-title
 								h3(href="blog-team-profile.html") That Person
 								p Designer
