--- a/libs/template/sidebar-blog.jade
+++ b/libs/template/sidebar-blog.jade
@@ -3,8 +3,8 @@
         .blog-sidebar--search
             fieldset
                 .search-results__field.field-group.field-group--buttons
-                    input(type="search", placeholder="Search", style="border: 1px solid #ccc;")
-                    button.btn.btn-primary(style="background-color:#fcbb69;border: 1px solid #fcbb69;")
+                    input(type="search", placeholder="Search")
+                    button.btn.btn-primary
                         i.icon-search
 
         .blog-sidebar--category
