--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -406,6 +406,7 @@ html.no-js
 				$(document).ready(function() {
 					$( "#toggle" ).on( "click", function() {
 						$( this ).next().slideToggle();
+						$( this ).toggleClass('active');
 					});
 				});
 
