fix: Removed top padding from card text if there is no image

--- a/libs/modules/cards.less
+++ b/libs/modules/cards.less
@@ -17,6 +17,9 @@
             font-weight: @font-weight-bolder;
             font-size: @font-size-medium;
         }
+        & + .card-text {
+            padding-top: 0;
+        }
     }
     .card-image-top {
         img {
