fix: Showing breadcrumb extent switcher, but changed it to blue so it's visible on white

--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -30,7 +30,7 @@
 }
 
 .breadcrumb__extent-link {
-    display: none;
+    //display: none;
 }
 
 .breadcrumb__item {
@@ -87,7 +87,7 @@
 }
 
 .breadcrumb__extent-link {
-    background-color: @white;
+    background-color: @heritage-blue-lightest;
     display: inline-block;
     color: @black;
     padding: .35em .5em;
