change: Changed content heading band to yellow, to begin bringing in new colour use

--- a/libs/modules/contents-page.less
+++ b/libs/modules/contents-page.less
@@ -23,7 +23,7 @@
 
 .content__header,
 .contents__header {
-    background-color: @gray-7;
+    background-color: @heritage-yellow-lighter;
     h1 {
         margin: @box-spacing 0;
     }
