--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -216,8 +216,11 @@ select:focus {
 /* Hide input steppers on webkit */
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
-   -webkit-appearance: none;
-   margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type='number'] {
+    -moz-appearance: textfield;
 }
 
 // Reset height for textareas
