fix: Moved icon in mobile sidenav inside the a Having the + - icons outside of the a was causing the icons to not be clickable, meaning they wouldn't trigger the collapse/expand of the nav

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -120,10 +120,6 @@
 	    	display: block;
 			background-color: @heritage-yellow-lighter;
 			cursor: pointer;
-            .btn-icon(@i-plus,@color:@heritage-blue);
-            .expanded & {
-                .btn-icon(@i-minus,@color:@heritage-blue);
-            }
             &:hover,
             &:active,
             &:visited {
@@ -133,7 +129,11 @@
 				font-size: @font-size-h4*1.25;
 				color: @heritage-blue;
 				cursor: pointer;
+            	.btn-icon(@i-plus,@color:@heritage-blue);
 			}
+            .expanded & a {
+                .btn-icon(@i-minus,@color:@heritage-blue);
+            }
 	    }
         &__heading + ul {
             display: block;
