--- a/libs/template/sidebar-navigation.jade
+++ b/libs/template/sidebar-navigation.jade
@@ -1,5 +1,5 @@
 - var section = "Navigation"
 +sidebar([
-	//{href: "cards.html", title: "Cards"},
+	{href: "sidebar.html", title: "Sidebar navigation"},
 	{href: "blocklinks.html", title: "Block links"}
 ])
