--- a/libs/jade/navigation/blocklinks.jade
+++ b/libs/jade/navigation/blocklinks.jade
@@ -19,14 +19,14 @@ block content
 		div
 			p Block links are, as it sounds, links which are styled as boxes. They take up the maximum width of content areas, these links are always internal and are only used when the main purpose of the page is to provide signposting to a set of options.
 
-			a(href="https://www.citizensadvice.org.uk/benefits/sick-or-disabled-people-and-carers/pip/help-with-your-pip-claim/fill-in-form/") An example of a block links in the wild.
+			a(href="https://www.citizensadvice.org.uk/benefits/sick-or-disabled-people-and-carers/pip/help-with-your-pip-claim/fill-in-form/") An example of block links in the wild.
 
 			.example-box-plain
-				a(href="#").blocklink Blocklink
-				a(href="#").blocklink.i-doc-image Image blocklink
-				a(href="#").blocklink.i-search Search blocklink
+				a(href="#").blocklink Block link
+				a(href="#").blocklink.i-doc-image Image block link
+				a(href="#").blocklink.i-search Search block link
 			pre
 				code.language-html
-					| &lt;a href="#" class="blocklink"&gt;Blocklink&lt;/a&gt;
-					| &lt;a href="#" class="blocklink i-doc-image"&gt;Image blocklink&lt;/a&gt;
-					| &lt;a href="#" class="blocklink i-search"&gt;Search blocklink&lt;/a&gt;
+					| &lt;a href="#" class="blocklink"&gt;Block link&lt;/a&gt;
+					| &lt;a href="#" class="blocklink i-doc-image"&gt;Image block link&lt;/a&gt;
+					| &lt;a href="#" class="blocklink i-search"&gt;Search block link&lt;/a&gt;
