--- a/libs/jade/navigation/sidebar.jade
+++ b/libs/jade/navigation/sidebar.jade
@@ -17,14 +17,19 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Sidebars
 
 			h2 Desktop sidebar
 
-			img(src="#{dir}images/sidebar-example.svg", style="border:none;")
+			p This is vertical navigation on the right hand side or top of the page on desktops. It’s used alongside content and contains sibling pages. When a sidebar navigation isn’t used on a content page, the content should not extend further than the main-content width.
+
+			img(src="#{dir}images/sidebar-example.svg")
 
 			h2 Mobile sidebar
 
-			img(src="#{dir}images/sidebar-mobile-example.svg", style="border:none;")
+			p The mobile version of the sidebar is collapsed and at the top of the page, this is achieved using the flex order -1. It is a continuation of the revealables pattern
+
+			p The title of the section nav, that groups the list of sibling pages needs to link back to the previous page.
+
+			img(src="#{dir}images/sidebar-mobile-example.svg")
 
 
