dev:add: Created footer navigation page

--- a/libs/template/sidebar-navigation.jade
+++ b/libs/template/sidebar-navigation.jade
@@ -1,5 +1,6 @@
 - var section = "Navigation"
 +sidebar([
+	{href: "blocklinks.html", title: "Block links"},
 	{href: "sidebar.html", title: "Sidebar navigation"},
-	{href: "blocklinks.html", title: "Block links"}
+	{href: "footer.html", title: "Footer navigation"}
 ])
