dev:add: Added new nav pages to index

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -102,6 +102,10 @@ block content
 					ul
 						li
 							a(href="navigation/blocklinks.html") Block links
+						li
+							a(href="navigation/sidebar.html") Sidebar navigation
+						li
+							a(href="navigation/footer.html") Footer navigation
 
 					h3#Branding Branding
 					ul
