change: Amends to navigations

--- a/libs/jade/talent.jade
+++ b/libs/jade/talent.jade
@@ -38,7 +38,7 @@ block content
 						.group-index-list
 							h3 #[a(href="volunteers.html") Volunteers]
 						.group-index-list
-							h3 #[a(href="") Porblems at work]
+							h3 #[a(href="") Problems at work]
 						.group-index-list
 							h3 #[a(href="") Leavers]
 
