--- a/libs/jade/volunteers.jade
+++ b/libs/jade/volunteers.jade
@@ -23,9 +23,8 @@ block content
 					h2 Legal and policies for volunteers
 					p #[a Volunteering strategy]
 					p #[a Policies for volunteers]
-					p #[a Legal status and rights of volunteers]
+					p #[a Legal status of volunteers]
 					p #[a Keeping volunteer records]
-					p #[a Volunteers without a contract]
 					p #[a Who can volunteer?]
 
 				.contents-page__section
