--- a/libs/template/template-site-2.jade
+++ b/libs/template/template-site-2.jade
@@ -121,7 +121,9 @@ html.no-js
 					li
 						a(href="") Finance
 					li
-						a(href="") Governance Learning
+						a(href="") Governance
+					li
+						a(href="") Learning
 					li
 						a(href="") Facilities
 					li
@@ -136,6 +138,8 @@ html.no-js
 						a(href="") Campaigns
 					li
 						a(href="") Finance
+					li
+						a(href="") Governance
 					li
 						a(href="") Learning
 					li
