create: Created recognition mockup page

--- a/libs/jade/volunteers.jade
+++ b/libs/jade/volunteers.jade
@@ -14,7 +14,6 @@ block breadcrumbs
 block content
 	.fullwidth-content
 			h1 #{title}
-			p Lorem ipsum
 
 	.fullwidth-content
 		.flex-container.flex-row
@@ -35,10 +34,10 @@ block content
 					p #[a References and DBS checks]
 
 				.contents-page__section
-					h2 Managing volunteers
+					h2#managing Managing volunteers
 					p #[a Induction]
 					p #[a Performance management]
-					p #[a Recognition]
+					p #[a(href="recognition.html") Recognising volunteers]
 					p #[a Volunteer complaints]
 					p #[a Measuring impact]
 					p #[a Volunteer administration]
