change: Finished off update of mockup

--- a/libs/jade/volunteers.jade
+++ b/libs/jade/volunteers.jade
@@ -19,10 +19,10 @@ block content
 		.flex-container.flex-row
 			.col-md-8.col-sm-12
 				.contents-page__section
-					h2 Legal and policies for volunteers
+					h2#legal Legal and policies for volunteers
 					p #[a Volunteering strategy]
 					p #[a Policies for volunteers]
-					p #[a Legal status of volunteers]
+					p #[a(href="legal-status-of-volunteers.html") Legal status of volunteers]
 					p #[a Keeping volunteer records]
 					p #[a Who can volunteer?]
 
