fix: content change

--- a/libs/jade/recognition.jade
+++ b/libs/jade/recognition.jade
@@ -34,7 +34,7 @@ block sidebar
 				li
 					a(href="#2") Significant ways to recognise volunteers
 				li
-					a(href="#3") Nominations for hours
+					a(href="#3") Nominations for honours
 
 block script
 	script.
