dev:change: Fixed up breadcrumb page and added it to navigation

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -103,6 +103,8 @@ block content
 						li
 							a(href="navigation/blocklinks.html") Block links
 						li
+							a(href="navigation/breadcrumbs.html") Breadcrumbs
+						li
 							a(href="navigation/sidebar.html") Sidebar navigation
 						li
 							a(href="navigation/footer.html") Footer navigation
