--- a/libs/template/sidebar-navigation.jade
+++ b/libs/template/sidebar-navigation.jade
@@ -1,6 +1,7 @@
 - var section = "Navigation"
 +sidebar([
 	{href: "blocklinks.html", title: "Block links"},
+	{href: "breadcrumbs.html", title: "Breadcrumbs"},
 	{href: "sidebar.html", title: "Sidebar navigation"},
 	{href: "footer.html", title: "Footer navigation"}
 ])
